workflows to develop

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - develop
 
 env:
   AZURE_WEBAPP_NAME: maurosmoviesapp   # set this to your application's name
